Add dietist scoping
